--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,12 +12,14 @@
   <div class="container mx-auto px-4">
     <h1 class="text-xl font-bold my-4">Welcome to the Daily Budget App</h1>
 
-    <div>
+    <!-- <div>
       <a href="/auth/google" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
         Login with Google
       </a>
-    </div>
+    </div> -->
+    
   </div>
+      <script src="/javascripts/main.js"></script>
 </body>
 
 </html>
