--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,9 +16,12 @@
       <a href="/settings" class="mdi mdiCog bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mr-2 ">
         Settings
       </a>
-      <a href="/logout" class="mdi mdiLogout bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ">
-        Logout
-      </a>
+      <form action="/logout" method="post">
+        <button type="submit" class="mdi mdiLogout bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ">
+          Logout
+        </button>
+      </form>
+
     </div>
   </header>
   <div class="container mx-auto px-4">
