--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -4,27 +4,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Signup</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <title>Sign Up</title>
+  <link rel='stylesheet' href='/stylesheets/output.css' />
+  <link href="/mdi/css/materialdesignicons.min.css" rel="stylesheet">
+  <link rel="icon" href="/images/logo.ico" type="image/x-icon">
 </head>
 
-<body>
-  <h1>Signup</h1>
-  <form action="/sign-up" method="POST">
-    <div>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
-    </div>
-    <div>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-    </div>
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Signup</button>
-  </form>
+<body class="bg-gray-100">
+  <div class="container mx-auto px-4">
+    <h1 class="text-xl font-bold my-4">Sign Up</h1>
+    <form action="/sign-up" method="post" class="my-4">
+      <div class="mb-4">
+        <label for="username" class="block text-gray-700 text-sm font-bold mb-2">Username:</label>
+        <input type="text" name="username" id="username" placeholder="Enter your username" class="border p-2 rounded w-full">
+      </div>
+      <div class="mb-4">
+        <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Email:</label>
+        <input type="email" name="email" id="email" placeholder="Enter your email" class="border p-2 rounded w-full">
+      </div>
+      <div class="mb-6">
+        <label for="password" class="block text-gray-700 text-sm font-bold mb-2">Password:</label>
+        <input type="password" name="password" id="password" placeholder="Enter your password" class="border p-2 rounded w-full">
+      </div>
+      <div class="flex items-center justify-between">
+        <button type="submit" class="mdi mdi-account-plus bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+          Sign Up
+        </button>
+        <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="/login">
+          Already registered? Log in!
+        </a>
+      </div>
+    </form>
+  </div>
 </body>
 
 </html>
