--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -13,12 +13,12 @@
 <body class="bg-gray-100">
   <header class="flex justify-between items-center py-4 px-4">
     <h1 class="text-4xl font-bold">Dashboard</h1>
-    <div class="flex flex-col gap-2">
-      <a href="/settings" class="mdi mdi-cog bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mr-2 ">
+    <div class="flex flex-col gap-2 w-30">
+      <a href="/settings" class="mdi mdi-cog bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mr-2 w-full text-center">
         Settings
       </a>
-      <form action="/logout" method="post">
-        <button type="submit" class="mdi mdi-logout bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ">
+      <form action="/logout" method="post" class="w-full">
+        <button type="submit" class="mdi mdi-logout bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded w-full text-center">
           Logout
         </button>
       </form>
@@ -72,15 +72,15 @@
 
     <form action="/add-expense" method="post" class="my-4">
       <input type="text" name="name" placeholder="Expense name (optional)" class="border p-2 rounded">
-      <input type="number" name="amount" placeholder="Expense amount" class="border p-2 rounded" required>
-      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+      <input type="number" step="0.01" min="0" name="amount" placeholder="Expense amount" class="border p-2 rounded" required>
+      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-32">
         Add Expense
       </button>
     </form>
 
     <form action="/update-budget" method="post" class="mb-4">
-      <input type="number" name="budget" placeholder="Set Budget" class="border p-2 rounded">
-      <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+      <input type="number" step="0.01" min="0" name="budget" placeholder="Set Budget" class="border p-2 rounded">
+      <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded w-32">
         Set Budget
       </button>
     </form>
