--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
 
 <body class="bg-gray-100">
   <div class="container mx-auto px-4">
-    <h1 class="text-xl font-bold my-4">Welcome to the Daily Budget App</h1>
+    <h1 class="text-3xl font-bold my-4 text-center">Welcome to the Daily Budget App</h1>
     <h1 class="text-xl font-bold my-4">Login</h1>
     <% if(hasErrors) { %>
     <% messages.forEach(function(message) { %>
